# haskell-cli4j

./: .dockerignore  Dockerfile  Makefile  README.md  app.cabal  test_data.json  test_data_new.json
src/: Main.hs
