name:           app
version:        0.1
cabal-version:  >=1.10
build-type:     Simple
author:         me

executable app
  build-depends:   
                   base >= 4,
                   transformers,
                   aeson < 0.7,
                   persistent,
                   persistent-sqlite,
                   persistent-template,
                   text,
                   time,
                   HTTP, 
                   http-conduit,
                   bytestring,
                   unordered-containers

  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs  
